--- a/website/templates/admin/students/edit_student.html
+++ b/website/templates/admin/students/edit_student.html
@@ -20,11 +20,11 @@
 						<table class = "tableS">
 							<div class='query'>
 								<th>
-									<label for="userCode">User Code:</label>
+									<label for="userCode">Student No.:</label>
 								</th>
 								<th class = "no_border">
 									<span>
-										<input type='text' id='userCode' name='userCode' value ="{{ to_edit.stud_no }}" disabled>
+										<input type='text' id='userCode' name='userCode' value ="{{ to_edit.stud_no }}">
 									</span>
 								</th>
 							</div>
