--- a/website/templates/admin/students/student.html
+++ b/website/templates/admin/students/student.html
@@ -14,7 +14,7 @@ Students
             {% for student in students %}
                 <div class='div1'>
 					<table>
-						<th class = "tb_desc">ID:</th>
+						<th class = "tb_desc">Student No.:</th>
 						<td>{{ student.stud_no }}</td>
 						<tr>
 						<th class = "tb_desc">Name:</th> 
