--- a/website/static/admin/new_style.css
+++ b/website/static/admin/new_style.css
@@ -96,7 +96,7 @@ main .top_bar {
     padding: 20px;
     padding-top: 0px;
     flex-direction: row;
-    margin-right: 14px;
+    padding-right: 35px;
 }
 
 .top_bar:after {
