--- a/website/templates/admin/groups/edit_group.html
+++ b/website/templates/admin/groups/edit_group.html
@@ -18,44 +18,56 @@
             </div>
 
             <div class='content_div'>
-                <div class='form_div'>
-                    <div class='query'>
-                        <label for="groupCode">Group Code:</label>
-                        <span>
-                            <input type='text' id='groupCode' name='groupCode' value ="{{ to_edit.id }}" disabled><br>
-                        </span>
-                    </div>
+                <form method='POST'>
+                    <div class='form_div'>
+                        <div class='query'>
+                            <label for="groupCode">Group Code:</label>
+                            <span>
+                                <input type='text' id='groupCode' name='groupCode' value ="{{ to_edit.id }}" disabled><br>
+                            </span>
+                        </div>
 
-                    <div class='query'>
-                        <label for="groupName">Group Name:</label>
-                        <span>
-                            <input type='text' id='groupName' name='groupName' value='{{ to_edit.name }}'>
-                        </span>
-                    </div>
-                        
-                    <div class='query'>
-                        <label for="projectTitle">Project Title:</label>
-                        <span>
-                            <input type='text' id='projectTitle' name='projectTitle' value='{{ to_edit.project_title }}'>
-                        </span>
-                    </div>
+                        <div class='query'>
+                            <label for="groupName">Group Name:</label>
+                            <span>
+                                <input type='text' id='groupName' name='groupName' value='{{ to_edit.name }}'>
+                            </span>
+                        </div>
+                            
+                        <div class='query'>
+                            <label for="projectTitle">Project Title:</label>
+                            <span>
+                                <textarea class="min_txt_size" id='projectTitle' name='projectTitle' required>{{ to_edit.project_title }}</textarea>
+                            </span>
+                        </div>
 
-                    <div class='query'>
-                        <label for="program">Program:</label>
-                        <span>
-                            <select name="program" id='program'>
-                                <option value='BSIT-AGD' {% if to_edit.program == 'BSIT-AGD' %}selected {% endif %}>BSIT-AGD</option>
-                                <option value='BSIT-DA' {% if to_edit.program == 'BSIT-DA' %}selected {% endif %}>BSIT-DA</option>
-                                <option value='BSIT-SMBA' {% if to_edit.program == 'BSIT-SMBA' %}selected {% endif %}>BSIT-SMBA</option>
-                                <option value='BSIT-WMA' {% if to_edit.program == 'BSIT-WMA' %}selected {% endif %}>BSIT-WMA</option>
-                                <option value='BSCS' {% if to_edit.program == 'BSCS' %}selected {% endif %}>BSCS</option>
-                                <option value='BMA' {% if to_edit.program == 'BMA' %}selected {% endif %}>BMA</option>
-                            </select>
-                        </span>
+                        <div class='query'>
+                            <label for="program">Program:</label>
+                            <span>
+                                <select name="program" id='program'>
+                                    <option value='BSIT-AGD' {% if to_edit.program == 'BSIT-AGD' %}selected {% endif %}>BSIT-AGD</option>
+                                    <option value='BSIT-DA' {% if to_edit.program == 'BSIT-DA' %}selected {% endif %}>BSIT-DA</option>
+                                    <option value='BSIT-SMBA' {% if to_edit.program == 'BSIT-SMBA' %}selected {% endif %}>BSIT-SMBA</option>
+                                    <option value='BSIT-WMA' {% if to_edit.program == 'BSIT-WMA' %}selected {% endif %}>BSIT-WMA</option>
+                                    <option value='BSCS' {% if to_edit.program == 'BSCS' %}selected {% endif %}>BSCS</option>
+                                    <option value='BMA' {% if to_edit.program == 'BMA' %}selected {% endif %}>BMA</option>
+                                </select>
+                            </span>
+                        </div>
+                        <div class='query'>
+                            <label for="program">Mentor:</label>
+                            <span>
+                                <select name="mentor" id='mentor'>
+                                    {% for mentor in mentors %}
+                                        <option value='{{ mentor.id }}' {% if to_edit.mentor_id == mentor.id %}selected {% endif %}>{{ mentor.last_name}}, {{ mentor.first_name }}</option>
+                                    {% endfor %}
+                                </select>
+                            </span>
+                        </div>
+                        <button id='submit' name='submit'>Submit</button>
                     </div>
-                    
-                    <button id='submit' name='submit'>Submit</button>
-                </div>
+                </form>
+                
             </div>
         </div>
     </div>
