Added group gradesheet template

--- a/website/templates/admin/gradesheet/group_grade_sheet.html
+++ b/website/templates/admin/gradesheet/group_grade_sheet.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/group_grade_sheet.css') }}">
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/group_grade_sheetNO.css') }}">
 		
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <title>{% block title %}{% endblock %}</title>
@@ -19,7 +19,7 @@
 				<a href="#indiv">Individual</a>
 				<a href="#grp">Group</a>
 				<a href="#cmt">Comment</a>
-				<p class='temp_id'>Template ID: {{ template.id }}</p>
+				<!-- <p class='temp_id'>Template ID: {{ template.id }}</p> -->
 			</div>
 			<div class="parent">
 				<div class="div1"> 
