--- a/website/templates/admin/gradesheet/group_sheet copy.html
+++ b/website/templates/admin/gradesheet/group_sheet copy.html
@@ -29,7 +29,7 @@
 				</div>
 				<div class="div2 green_bg"> 
 					<title_font1>ORAL DEFENSE</title_font1>
-					<title_font1><br>INDIVIDUAL GRADE SHEET</title_font1>
+					<title_font1><br>GROUP GRADE SHEET</title_font1>
 				</div>
 				<div class="div3"> 
 					<details_font>GROUP NAME:</details_font>
@@ -94,6 +94,9 @@
 				</div>
 				<div class = "div36">
 					<table>
+						<tr>
+							<th rowspan="2" class = "one_rad_sd">CRITERIA AND WEIGHT</th>
+						</tr>
 						<th rowspan="2" class = "one_rad_sd">CRITERIA AND WEIGHT</th>
 						<th>5</th>
 						<th>4</th>
