--- a/website/templates/admin/gradesheet/group_sheet.html
+++ b/website/templates/admin/gradesheet/group_sheet.html
@@ -29,7 +29,7 @@
 				</div>
 				<div class="div2 green_bg"> 
 					<title_font1>ORAL DEFENSE</title_font1>
-					<title_font1><br>INDIVIDUAL GRADE SHEET</title_font1>
+					<title_font1><br>GROUP GRADE SHEET</title_font1>
 				</div>
 				<div class="div3"> 
 					<details_font>GROUP NAME:</details_font>
@@ -94,45 +94,50 @@
 				</div>
 				<div class = "div36">
 					<table>
-						<th rowspan="2" class = "one_rad_sd">CRITERIA AND WEIGHT</th>
-						<th>5</th>
-						<th>4</th>
-						<th>3</th>
-						<th>2</th>
-						<th>1</th>
-						<th colspan="4" rowspan="2" class="yellow_bg two_rad_sd">STUDENT <br> INDIVIDUAL <br> GRADE</th>
-						<tr>
-							<th>VERY ACCEPTABLE</th>
-							<th>ACCEPTABLE</th>
-							<th>FAIR</th>
-							<th>NEEDS IMPROVEMENT</th>
-							<th>POOR</th>
-						</tr>
-						{% for rubric in rubrics %}
+						{% for category in categories %}
 							<tr>
-								<td class = "tb_title">
-									{{ rubric.desc }}
-									<br>
-									(x{{ rubric.weight }})
-								</td>
-								<td class = "tb_desc">
-									{{ rubric.rate5 }}
-								</td>
-								<td class = "tb_desc">
-									{{ rubric.rate4 }}
-								</td>
-								<td class = "tb_desc">
-									{{ rubric.rate3 }}
-								</td>
-								<td class = "tb_desc">
-									{{ rubric.rate2 }}
-								</td>
-								<td class = "tb_desc">
-									{{ rubric.rate1 }}
-								</td>
-								{% for x in range(1, 5) %}
-									<td>
-										{{ x }} <br> <br>
+								<td colspan='8' style='color: transparent;'>                asdada             </td>
+							</tr>
+							<th colspan="8" class = "yellow_bg">{{ category }}</th>
+							<tr></tr>
+
+							<th rowspan="2">CRITERIA AND WEIGHT</th>
+							<th>5</th>
+							<th>4</th>
+							<th>3</th>
+							<th>2</th>
+							<th>1</th>
+							<th colspan="4" rowspan="2" class="yellow_bg ">SCORE</th>
+							<tr>
+								<th>VERY ACCEPTABLE</th>
+								<th>ACCEPTABLE</th>
+								<th>FAIR</th>
+								<th>NEEDS IMPROVEMENT</th>
+								<th>POOR</th>
+							</tr>
+							{% for rubric in categories[category] %}
+								<tr>
+									<td class = "tb_title left_yborder gray_bg">
+										{{ rubric.desc }}
+										<br>
+										(x{{ rubric.weight }})
+									</td>
+									<td class = "tb_desc">
+										{{ rubric.rate5 }}
+									</td>
+									<td class = "tb_desc">
+										{{ rubric.rate4 }}
+									</td>
+									<td class = "tb_desc">
+										{{ rubric.rate3 }}
+									</td>
+									<td class = "tb_desc">
+										{{ rubric.rate2 }}
+									</td>
+									<td class = "tb_desc">
+										{{ rubric.rate1 }}
+									</td>
+									<td class="gray_bg">
 										<select name="score" id="score">
 											<option value="five">5</option>
 											<option value="four">4</option>
@@ -141,21 +146,22 @@
 											<option value="One">1</option>
 										</select>
 									</td>
-								{% endfor %}
-							
-							</tr>
-						{% endfor %}	
+								</tr>
+							{% endfor %}
+						{% endfor %}
+					</table>
+
+					<br>		
+					<table class = "two" >
+						<th class="tb_jatot green_bg ">TOTAL</th>		
+						<td class=" yellow_bg ">0</td>
 					</table>
 					<table>
-						<td class = "tb_title">&nbsp;</td>
-						{% for _ in range(4) %}
-							<td class = "tb_desc">&nbsp;</td>
-						{% endfor %}						
-						<td class="tb_desc four_rad_sd green_bg empty_spc">TOTAL</td>
-						{% for _ in range(3) %}
-							<td class="yellow_bg empty_spc">0</td>
-						{% endfor %}						
-						<td class="three_rad_sd yellow_bg empty_spc">0</td>
+						<th> TEST </th>
+						<th> Overall </th>
+						<tr>
+						<td> 0 </td>
+						<td> 0 </td>
 					</table>
 				</div>
 				<div class="div116 drkr_grn"> 
