--- a/website/templates/admin/gradesheet/view_sheet.html
+++ b/website/templates/admin/gradesheet/view_sheet.html
@@ -14,14 +14,16 @@
 	<body>
 		{% set x = 0 %}
 		<form method='POST'>
-			<!-- <div class="topnav">
-				<a class="active" href="#back">Back</a>
-				<a href="#indiv">Individual</a>
-				<a href="#grp">Group</a>
-				<a href="#cmt">Comment</a>
-				<p class='temp_id'>Template ID: {{ template.id }}</p>
-			</div> -->
 			<div class="parent">
+				<div class="div23 empty_spc">
+					<a href='/gradesheets/'>
+						<input type='button' class="back_but" id="button_inp" name="button_inp" value='Back'></button>
+					</form>
+					</a>
+				</div>
+				<div class="div23two empty_spc right_align"> 
+					<p class='temp_id'>Template ID: {{ template.id }}</p>
+				</div>
 				<div class="div1"> 
 					<h1>FEU ALABANG</h1>
 				</div>
@@ -30,50 +32,75 @@
 					<title_font1><br>INDIVIDUAL GRADE SHEET</title_font1>
 				</div>
 				<div class="div3"> 
-					<table>
-						<td class="left_gborder gray_bg">GROUP NAME:</td>
-						<td class="" colspan = "3">G R O U P D E T A I L S</td>
-						<tr>
-						<td class="left_gborder gray_bg">PROJECT TITLE:</td>
-						<td class=""colspan = "3" >P R O J E C T D E T A I L S</td>
-						<tr>
-						<td class=" left_gborder gray_bg " rowspan ="2">ORAL DEFENSE: <br> SCHEDULE: </td>
-						<td class=" gray_bg ">DATE:</td>
-						<td class=" gray_bg">TIME:</td>
-						<td class=" gray_bg ">ROOMS:</td>
-						<tr>
-						<td class="">DATE DETAILS</td>
-						<td class="">TIME DETAILS</td>
-						<td class="">ROOMS DETAILS</td>
-					</table>
-					
+					<details_font>GROUP NAME:</details_font>
 				</div>
 				<div class="div4"> 
-					<table>
-						<th colspan = "4">PROPONENT NAME(LN,FN, MI.)</th>
-						<tr>
-						<td class="left_gborder gray_bg">PROPONENT 1:</td>
-						<td class="">PROPONENT D E T A I L S</td>
-						<td class="left_gborder gray_bg">PROPONENT 2:</td>
-						<td>PROPONENT D E T A I L S</td>
-						<tr class="">
-						<td class="left_gborder gray_bg">PROPONENT 3:</td>
-						<td class="">PROPONENT D E T A I L S</td>
-						<td class="left_gborder gray_bg">PROPONENT 4:</td>
-						<td class="">PROPONENT D E T A I L S</td>
-						<tr>
-					</table>
-			
+					<details_font>G R O U P D E T A I L S</details_font>
 				</div>
-				<div class = "div5">
+				<div class="div5"> 
+					<details_font>PROJECT TITLE:</details_font>
+				</div>
+				<div class="div6"> 
+					<details_font>P R O J E C T D E T A I L S</details_font>
+				</div>
+				<div class="div7"> 
+					<details_font>ORAL DEFENSE:</details_font><br>
+					<details_font>SCHEDULE:</details_font>
+				</div>
+				<div class="div8"> 
+					<details_font>DATE:</details_font>
+				</div>
+				<div class="div9"> 
+					<details_font>TIME:</details_font> 
+				</div>
+				<div class="div10"> 
+				<details_font>ROOMS:</details_font> 
+				</div>
+				<div class="div11"> 
+					DATE DETAILS 
+				</div>
+				<div class="div12"> 
+					TIME DETAILS
+				</div>
+				<div class="div13"> 
+					ROOM DETAILS
+				</div>
+				<div class="div14 green_bg empty_spc"> 
+					<prop_font1> PROPONENT NAME (LN, FN MI.) </prop_font1>
+				</div>
+				<div class="div15"> 
+					<details_font> PROPONENT 1: </details_font>
+				</div>
+				<div class="div16"> 
+					P R O P O N E N T D E T A I L S
+				</div>
+				<div class="div17"> 
+					<details_font> PROPONENT 2: </details_font>
+				</div>
+				<div class="div18"> 
+					P R O P O N E N T D E T A I L S
+				</div>
+				<div class="div19"> 
+					<details_font> PROPONENT 3: </details_font>
+				</div>
+				<div class="div20"> 
+					P R O P O N E N T D E T A I L S
+				</div>
+				<div class="div21"> 
+					<details_font> PROPONENT 4: </details_font>
+				</div>
+				<div class="div22"> 
+					P R O P O N E N T D E T A I L S
+				</div>
+				<div class = "div36">
 					<table>
-						<th rowspan="2">CRITERIA AND WEIGHT</th>
+						<th rowspan="2" class = "one_rad_sd">CRITERIA AND WEIGHT</th>
 						<th>5</th>
 						<th>4</th>
 						<th>3</th>
 						<th>2</th>
 						<th>1</th>
-						<th colspan="4" rowspan="2" class="yellow_bg ">STUDENT <br> INDIVIDUAL <br> GRADE</th>
+						<th colspan="4" rowspan="2" class="yellow_bg two_rad_sd">STUDENT <br> INDIVIDUAL <br> GRADE</th>
 						<tr>
 							<th>VERY ACCEPTABLE</th>
 							<th>ACCEPTABLE</th>
@@ -83,7 +110,7 @@
 						</tr>
 						{% for rubric in rubrics %}
 							<tr>
-								<td class = "tb_title left_gborder">
+								<td class = "tb_title">
 									{{ rubric.desc }}
 									<br>
 									(x{{ rubric.weight }})
@@ -104,7 +131,7 @@
 									{{ rubric.rate1 }}
 								</td>
 								{% for x in range(1, 5) %}
-									<td class = "gray_bg">
+									<td>
 										{{ x }} <br> <br>
 										<select name="score" id="score">
 											<option value="five">5</option>
@@ -119,15 +146,19 @@
 							</tr>
 						{% endfor %}	
 					</table>
-					<table class = "two" >
-						<th class="tb_jatot green_bg ">TOTAL</th>
-						{% for _ in range(3) %}
-							<td class="yellow_bg ">0</td>
+					<table>
+						<td class = "tb_title">&nbsp;</td>
+						{% for _ in range(4) %}
+							<td class = "tb_desc">&nbsp;</td>
 						{% endfor %}						
-						<td class=" yellow_bg ">0</td>
-					</table>
+						<td class="tb_desc four_rad_sd green_bg empty_spc">TOTAL</td>
+						{% for _ in range(3) %}
+							<td class="yellow_bg empty_spc">0</td>
+						{% endfor %}						
+						<td class="three_rad_sd yellow_bg empty_spc">0</td>
+						</table>
 				</div>
-				<div class="div6"> 
+				<div class="div116 drkr_grn"> 
 					<button type="submit" class="but" id="button_inp" name="button_inp" disabled>SUBMIT</button>
 				</div>
 			</div>
@@ -145,6 +176,4 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</body>
-
-
 </html>
