--- a/website/templates/admin/sheettab/gradesheet.html
+++ b/website/templates/admin/sheettab/gradesheet.html
@@ -45,7 +45,7 @@ Gradesheets
 							</a>
 						</th>
 						<th>
-							<a href="">
+							<a href="/delete_sheet/{{ template.id }}">
 								<button class = "but2">Delete</button>
 							</a>
 						</th>
