--- a/website/templates/admin/schedules/assign_indiv.html
+++ b/website/templates/admin/schedules/assign_indiv.html
@@ -1,40 +1,47 @@
 {% extends "schedules/schedule.html" %}
 {% block overlay %}
-    <div id="overlay">
-        <div class='container'>
-            <div class='header_div'>
-                <div class='header_title'>
-                    Create New Schedule
-                </div>
-                <div class='close_button'>
-                    <a href='/schedule'>
-                        <img src="{{ url_for('static', filename='close.png') }}">
-                    </a>
-                </div>
-                
+<div id="overlay">
+    <div class='container' style='z-index: 2;'>
+        <div class='header_div'>
+            <div class='header_title'>
+                <p class = "header_white">Assign Individual Gradesheet</p>
             </div>
-            <div class='content_div'>
-                <div class='display_grid'>
+            <div class='close_button'>
+                <a href='/schedule/'>
+                    <img src="{{ url_for('static', filename='close.png') }}">
+                </a>
+            </div>
+        </div>
+
+        <div class='content_div'>
+            <form method='POST'>
+                <div class='form_div'>
                     {% if templates %}
                         {% for template in templates %}
-                            
-                            <div class='box'>
-                                <p>ID: {{ template.id }}</p>
-                                <p>Gradesheet Type: {{ template.sheet_type }}</p>
-                                <p>Rubrics:</p>
-                                <ul>
-                                    {% for rubric in template.rubric %}
-                                        <li>{{ rubric.desc }}</li>
-                                    {% endfor %}
-                                </ul>
-                                <a href="">
-                                    <button>Assign</button>
-                                </a>
-                            </div>
+                            {% if template.sheet_type == 'Individual' %}
+                                <div class='box'>
+                                    <p>ID: {{ template.id }}</p>
+                                    <p>Gradesheet Type: {{ template.sheet_type }}</p>
+                                    <p>Rubrics:</p>
+                                    <ul>
+                                        {% for rubric in template.rubric %}
+                                            <li>{{ rubric.desc }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                    <a href="">
+                                        <button>Assign</button>
+                                    </a>
+
+                                    <a href="">
+                                        <button>View</button>
+                                    </a>
+                                </div>
+                            {% endif %}
                         {% endfor %}
                     {% endif %}
                 </div>
-            </div>
+            </form>
         </div>
     </div>
+</div>
 {% endblock %}
