--- a/website/templates/admin/groups/groups.html
+++ b/website/templates/admin/groups/groups.html
@@ -57,7 +57,7 @@
 							<ul>
 								{% for member in group.members %}
 									
-									<th class = "no_border"> Member #{{ member.stud_no }}</th>
+									<th class = "no_border"> Student No. #{{ member.stud_no }}</th>
 									<td> {{ member.last_name }}, {{ member.first_name }} {{ member.middle_in }}.</td>
 									<tr>
 								{% endfor%}
