--- a/website/templates/admin/groups/delete_group.html
+++ b/website/templates/admin/groups/delete_group.html
@@ -5,21 +5,26 @@
 </head>
 
     <div id="overlay">
-		<div id="text">
-			<table class = "sml_tbl">
-				<th colspan = "2" class = "no_border">Are you sure?</th>
-				<tr>
-					<form method='POST'>
-						<th class = "no_border">
-							<button id='submit' name='submit' value='yes'>Yes</button>
+		<div class='container2'>
+            <div class='header_div'>
+				<div id="text">
+					<div>
+						<table class = "sml_tbl">
+						<th colspan = "2" class = "no_border">Are you sure?</th>
 						</th>
-						<th class = "no_border">
-							<button id='submit' name='submit' values='no'>No</button>
-						</th>
-					</form>
-				</tr>
-				
-			</table>
+						<tr>
+						<form method='POST'>
+							<th class = "no_border">
+								<button id='submit' name='submit' value='yes'>Yes</button>
+							</th>
+							<th class = "no_border">
+								<button id='submit' name='submit' values='no'>No</button>
+							</th>
+						</form>
+						</table>
+					</div>
+				</div>
+			</div>
 		</div>
     </div>
 {% endblock %}
