--- a/website/static/admin/new_style.css
+++ b/website/static/admin/new_style.css
@@ -263,3 +263,110 @@ input {
 .query span select {
     width: 100%;
 }
+
+
+
+table{
+	margin-left: auto;
+	margin-right: auto;
+	width: 1500px;
+	border: 2px solid green;
+}
+
+.tableS{
+	width: 90%;
+	align-items: center;
+}
+
+th{
+	min-height: 10px;
+	background: #E0E0E0;
+	border-left:  10px solid green; 
+	color: black;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	
+}
+td{
+	border: 1px dotted #ddd;
+	height: 100%;
+	padding: 5px;
+}
+
+.tb_title{
+	width: 9%;
+}
+
+.tb_desc{
+	width: 15%;
+}
+
+
+.sep_fifty{
+	width: 25%;
+}
+
+.right_align{
+	float: left;
+}
+
+.sep_20{
+	width: 20%;
+} 
+
+.sep_10{
+	width: 10%;
+}
+
+.no_border{
+	border: 0px;
+}
+
+.green_bg{
+	background: green;
+}
+
+.hd_text{
+	color: white;
+}
+
+.dropdown_fill{
+	width: 70%;
+	height: 100%;
+}
+
+.min_txt_size{
+	height: 80px;
+}
+
+.center_text{
+	text-align: center;
+}
+
+.small_bottom_margin{
+	margin-bottom: 3px;
+}
+
+.header_white{
+	color: white;
+	font-size: 40px;
+}
+
+
+.but2{
+	padding: 0px;
+	width: 100%;
+	height: 100%;
+	border-radius: 0px;
+	background-color: white; 
+	color: black; 
+	background-color: #E0E0E0;
+	border: 2px solid #E0E0E0;
+	cursor: pointer;
+}
+
+.but2:hover {
+	width: 100%;
+	height: 100%;
+	background-color: white;
+}
