Updated database models

--- a/website/templates/admin/schedules/assign_indiv.html
+++ b/website/templates/admin/schedules/assign_indiv.html
@@ -16,6 +16,7 @@
         <div class='content_div'>
             <form method='POST'>
                 <div class='form_div'>
+                    <p>Defense ID: </p>
                     {% if templates %}
                         {% for template in templates %}
                             {% if template.sheet_type == 'Individual' %}
