--- a/website/templates/admin/gradesheet/view_indiv.html
+++ b/website/templates/admin/gradesheet/view_indiv.html
@@ -16,9 +16,14 @@
 		<form method='POST'>
 			<div class="parent">
 				<div class="div23 empty_spc">
-					<a href='/gradesheets/'>
+					{% if where == None %}
+						<a href='/gradesheets/'>
+					{% elif where == 'to_sched' %}
+						<a href='/assign_sheet/{{ sheet_type }}/{{ def_id }}'>
+					{% else %}
+						<a href='/schedule/'>
+					{% endif %}
 						<input type='button' class="back_but" id="button_inp" name="button_inp" value='Back'></button>
-					</form>
 					</a>
 				</div>
 				<div class="div23two empty_spc right_align"> 
